# src/swagger.json
@@ -1,8 +1,8 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "ContaComigo API Documentation",
-    "description": "in this documentation you will be able to consult the API endpoints and also test all available routes. Do not forget to register and carry out the authorization",
+    "title": "ContaComigoWebApp API Documentation",
+    "description": "In this documentation you will be able to consult the API end-points and also test all available routes. Do not forget to register and carry out the authorization.",
     "contact": {
       "email": "felipehelpnet@gmail.com"
     },
@@ -10,13 +10,13 @@
   },
   "servers": [
     {
-      "url": "http://localhost:8080",
-      "description": "Local Server"
+      "url": "http://localhost:3000",
+      "description": "Local"
     }
   ],
   "paths": {
     "/user/create": {
-      "post": {
+      "register": {
         "summary": "Create a new user",
         "description": "Route responsible for creating a new user",
         "tags": ["Users"],
@@ -29,9 +29,11 @@
               "examples": {
                 "Users": {
                   "value": {
-                    "name": "Álvara Linda",
-                    "email": "alvara@gmail.com",
+                    "name": "nome teste",
+                    "username": "userteste",
+                    "email": "teste@gmail.com",
                     "password": "12345"
+                    
                   }
                 }
               }
@@ -174,8 +176,8 @@
       }
     },
     "/auth/login": {
-      "post": {
-        "summary": "Login to Breaking News",
+      "register": {
+        "summary": "Login to Conta Comigo",
         "description": "Route responsible for logging in a registered user",
         "tags": ["Auth"],
         "requestBody": {
@@ -187,7 +189,7 @@
               "examples": {
                 "User": {
                   "value": {
-                    "email": "exemplo@gmail.com",
+                    "email": "felipehelpnet@gmail.com",
                     "password": "12345"
                   }
                 }
@@ -205,47 +207,83 @@
         }
       }
     },
-    "/register/": {
-      "post": {
-        "summary": "Create a new post",
-        "description": "Route responsible for creating a new Post",
-        "tags": ["Post"],
+    "/registers/create": {
+      "register": {
+        "summary": "Create a new register",
+        "description": "Route responsible for creating a new register",
+        "tags": ["Register"],
         "security": [{ "bearerAuth": [] }],
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Post"
+                "$ref": "#/components/schemas/Register"
               },
               "examples": {
                 "Register": {
                   "value": {
                     "user": "",
+                    "banner": "https://labs.tadigital.com/wp-content/uploads/2017/07/ES6-banner.jpg",
                     "title": "ECMAScript 6",
-                    "description": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.",
-                    "valor": 10,
-                    "nature": "crédito",
+                    "text": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.",
                     "likes": [],
                     "comments": []
                   }
                 }
               }
             }
+          }
+        },
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
           },
-          "responses": {
-            "401": {
-              "description": "Unauthorized"
-            },
-            "400": {
-              "description": "Not Found"
-            },
-            "201": {
-              "description": "Created",
-              "content": {
-                "application/json": {
-                  "schemma": {
-                    "type": "object",
-                    "$ref": "#/components/schemas/Post"
+          "400": {
+            "description": "Not Found"
+          },
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schemma": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Register"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/registers": {
+      "get": {
+        "summary": "Search all registers",
+        "description": "Route responsible for fetching all registers",
+        "tags": ["Register"],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "limit",
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "offset",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Register"
                   }
                 }
               }
@@ -254,13 +292,338 @@
         }
       }
     },
-    "/register/top": {},
-    "/register/byUser": {},
-    "/register/{id}": {},
-    "/register/{id}/": {},
-    "/register/like/{id}": {},
-    "/register/comment/{id}": {},
-    "/register/comment/{idRegister}/{idComment}": {}
+    "/registers/top": {
+      "get": {
+        "summary": "Search top register",
+        "description": "Route responsible for fetching top register",
+        "tags": ["Register"],
+        "responses": {
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schemma": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Register"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/registers/search": {
+      "get": {
+        "summary": "Search registers by title",
+        "description": "Route responsible for fetching the registers that match the title sent via query params",
+        "tags": ["Register"],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "title",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Register"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/registers/byIdRegister/{id}": {
+      "patch": {
+        "summary": "Search register by id",
+        "description": "Route responsible for fetching register by id",
+        "tags": ["Register"],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "description": "Register ID",
+            "required": true
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schemma": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Register"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/registers/byUserId": {
+      "get": {
+        "summary": "Search registers by use id",
+        "description": "Route responsible for fetching registers by use id",
+        "tags": ["Register"],
+        "responses": {
+          "400": {
+            "description": "Not Found"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Register"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/registers/upadate/{id}": {
+      "patch": {
+        "summary": "Update a register",
+        "description": "Route responsible for updating a Register",
+        "tags": ["Register"],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "description": "Register ID",
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Register"
+              },
+              "examples": {
+                "Register": {
+                  "value": {
+                    "banner": "",
+                    "title": "",
+                    "text": ""
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schemma": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Register"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/registers/delete/{id}": {
+      "delete": {
+        "summary": "Delete a register",
+        "description": "Route responsible for deleting a Register",
+        "tags": ["Register"],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "description": "Register ID",
+            "required": true
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/registers/{id}/like": {
+      "patch": {
+        "summary": "Like a register",
+        "description": "Route responsible for liking a register",
+        "tags": ["Register"],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "description": "User ID",
+            "required": true
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/registers/{id}/comment": {
+      "patch": {
+        "summary": "Comment on a register",
+        "description": "Route responsible for commenting on a register",
+        "tags": ["Register"],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "type": "string",
+            "description": "User ID",
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Comment"
+              },
+              "examples": {
+                "Comment": {
+                  "value": {
+                    "message": "Comentário legal"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    }
   },
-  "components": {}
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    },
+    "schemas": {
+      "User": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "username": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        }
+      },
+      "Register": {
+        "type": "object",
+        "properties": {
+          "user": {
+            "type": "string"
+          },          
+          "title": {
+            "type": "string"
+          },
+          "text": {
+            "type": "string"
+          },
+          "likes": {
+            "type": "number"
+          },
+          "comments": {
+            "type": "array"
+          },
+          "createdAt": {
+            "type": "date"
+          }
+        }
+      },
+      "Comment": {
+        "type": "object",
+        "properties": {
+          "message": {
+            "type": "string"
+          }
+        }
+      }
+    }
+  }
 }
